src/objects/UniqueEntry__Scanned_Field_Config__c.object
<CustomObject>
    <fields>
        <fullName>UniqueEntry__External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Object__c</fullName>
        <label>Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__isPreset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isPreset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__isRelated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>check if the Config is use in display related Object</description>
        <label>isRelated</label>
        <type>Checkbox</type>
    </fields>
    <label>Scanned Field Config</label>
    <listViews>
        <fullName>UniqueEntry__All_Config</fullName>
        <filterScope>Everything</filterScope>
        <label>All Config</label>
    </listViews>
    <nameField>
        <label>Scanned Field Config Name Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scanned Field Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>